Added feature so all text is selectable in contentScript.css & Changed content script matches in manifest.json & Added features section in & Updated main description in & Added stars badge in README.md

--- a/public/assets/contentScript.css
+++ b/public/assets/contentScript.css
@@ -1,3 +1,7 @@
+:root {
+    --user-select-accessibility-setting: default !important; /* Makes all text selectable */
+}
+
 .screenshot {
     width: 600px;
     min-height: 337.5px;
